--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-boost": "^0.4.9",
+    "graphql": "^15.6.1",
     "infinite-react-carousel": "^1.2.11",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
