--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "cypress:open": "cypress open",
+    "test": "cypress run"
   },
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "cypress": "^8.6.0",
     "vite": "^2.5.2"
   }
 }
