--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
             sudo apt-get update
             sudo apt install python3-pip
             sudo pip3 install awsebcli --upgrade
-      - run: cd npm install && npm run build
+      - run: npm install && npm run build
       - run: aws s3 sync ./dist s3://old-wave-react
 workflows:
   version: 2
